--- a/main.html
+++ b/main.html
@@ -11,6 +11,24 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+<table>
+	<tr>
+		<td class="image"><img src="https://images.pexels.com/photos/425047/pexels-photo-425047.jpeg?cs=srgb&dl=apartment-architecture-buildings-business-425047.jpg&fm=jpg" alt=""></td>
+		<td class="text">The architecture of these buildings is striking and modern, characterized by vibrant facades in green, metallic, and red. The design features repeating patterns of windows and structural elements, creating a visually engaging urban landscape. This innovative approach adds a dynamic and colorful touch to the cityscape, showcasing contemporary architectural trends.</td>
+		<td class="image"><img src="https://images.pexels.com/photos/425047/pexels-photo-425047.jpeg?cs=srgb&dl=apartment-architecture-buildings-business-425047.jpg&fm=jpg" alt=""></td>
+	</tr>
+	
+	<tr>
+		<td class="image"><img src="https://tse2.mm.bing.net/th?id=OIP.tABeaYYI42iW4D99Zu6ewwHaFN&pid=Api&P=0&h=180" alt=""></td>
+		<td class="text">The architecture of these skyscrapers is remarkable for their twisted, curvilinear design, which creates a sense of movement and fluidity. The glass façades reflect the sky and surroundings, integrating the buildings into their environment while standing out as modern landmarks. This innovative approach showcases advanced engineering and contemporary architectural trends.</td>
+		<td class="image"><img src="https://tse2.mm.bing.net/th?id=OIP.tABeaYYI42iW4D99Zu6ewwHaFN&pid=Api&P=0&h=180" alt=""></td>
+	</tr>
+
+	
+	
+</table>
+
+	
 </body>
 
 </html>
