--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div class="imageContainer">
 <table>
 	<tr>
 		<td class="image"><img src="https://images.pexels.com/photos/425047/pexels-photo-425047.jpeg?cs=srgb&dl=apartment-architecture-buildings-business-425047.jpg&fm=jpg" alt=""></td>
@@ -27,7 +27,7 @@
 	
 	
 </table>
-
+</div>
 	
 </body>
 
